; ModuleID = '/home/carl/AnghaBench/darwin-xnu/pexpert/arm/extr_pe_identify_machine.c_pe_arm_get_soc_revision.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/pexpert/arm/extr_pe_identify_machine.c_pe_arm_get_soc_revision.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"name\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"arm-io\00", align 1
@kSuccess = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [14 x i8] c"chip-revision\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pe_arm_get_soc_revision() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = call i64 @DTFindEntry(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i32* %2)
  %6 = load i64, i64* @kSuccess, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %25

8:                                                ; preds = %0
  %9 = load i32, i32* %2, align 4
  %10 = bitcast i32** %3 to i8**
  %11 = call i64 @DTGetProperty(i32 %9, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0), i8** %10, i32* %4)
  %12 = load i64, i64* @kSuccess, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %25

14:                                               ; preds = %8
  %15 = load i32, i32* %4, align 4
  %16 = icmp eq i32 %15, 8
  br i1 %16, label %17, label %22

17:                                               ; preds = %14
  %18 = load i32*, i32** %3, align 8
  %19 = bitcast i32* %18 to i64*
  %20 = load i64, i64* %19, align 8
  %21 = trunc i64 %20 to i32
  store i32 %21, i32* %1, align 4
  br label %26

22:                                               ; preds = %14
  %23 = load i32*, i32** %3, align 8
  %24 = load i32, i32* %23, align 4
  store i32 %24, i32* %1, align 4
  br label %26

25:                                               ; preds = %8, %0
  store i32 0, i32* %1, align 4
  br label %26

26:                                               ; preds = %25, %22, %17
  %27 = load i32, i32* %1, align 4
  ret i32 %27
}

declare dso_local i64 @DTFindEntry(i8*, i8*, i32*) #1

declare dso_local i64 @DTGetProperty(i32, i8*, i8**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
